# TerML

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: terml.yml
Brainstorming ideas for TerML features/: TerML - Features, Commands, AI.kanban.md
terml/: __init__.py  ai_integration.py  code_analyzer.py  commands.py  config.py  dependency_manager.py  main.py  project_templates.py  terminal_handler.py  test_generator.py
terml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ai_integration.py  test_terml_basic.py
